# book_warden

./: LICENSE  README.md
.github/: pull_request_template.md
api/: .env.example  .gitignore  .python-version  Makefile  README.md  main.py  pyproject.toml  requirements.txt
api/apps/: exceptions.py  routes.py  validators.py
api/apps/books/: dtos.py  models.py  repositories.py  routes.py  services.py
api/config/: logging.py  settings.py
api/db/: setup.py
api/tests/: config.py
api/tests/apps/: test_validators.py
api/tests/apps/books/: test_api_integration.py  test_repository_integration.py  test_services.py
