[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "testcontainers>=4.9.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
target-version = "py312"
line-length = 80
indent-width = 4
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "db"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "F401",  # Allow unused imports in test files - pytest fixtures are injected
    "F811",  # Allow fixture redefinition in tests
]

[tool.mypy]
python_version="3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.black]
target-version = ["py312"]
line-length = 80
include = "\\.pyi?$"
extend-exclude = """
/(
    \\.git
  | __pycache__
  | \\.venv
  | db
)/
"""

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3

